--- a/PROJECT-NOTICIAS/style/sections.css
+++ b/PROJECT-NOTICIAS/style/sections.css
@@ -2,11 +2,14 @@
     img {
         height: 100%;
         object-fit: cover;
-        border-radius: 4px;
+        
     }
 
     .card {
+        border-radius: 4px;
         position: relative;
+        overflow: hidden;
+
         &::before {
             content: "";
             position: absolute;
@@ -17,6 +20,17 @@
                 transparent 0%,
                 #020617 100%
             );
+        }
+
+        figcaption {
+            position: absolute;
+            bottom: 0;
+            
+            padding: 24px;
+
+            h2 {
+                margin-top: 8px;
+            }
         }
     }
 }
